# libffi

./: .appveyor.yml  .gail-labels  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  README.md  SECURITY.md  acinclude.m4  build.sh  config.guess  config.sub  configure  configure.ac  configure.host  configure_options.cmake  conftest.py  fficonfig.h.meson  generate-darwin-source-and-headers.py  generate-ios-source-and-headers.py  generate-osx-ios-source-and-headers.py  generate-osx-source-and-headers.py  index.html  libffi.map.in  libffi.pc.in  libtool-version  meson.build  meson_options.txt  msvcc.sh  test-cc-supports-hidden-visibility.py
.cave/workflows/: ci.yml
.ci/: Containerfile.debian  Containerfile.ppc64le  Containerfile.s390x  build-cross-in-container.sh  build-in-container.sh  build.sh  install.sh  meson-build.py  meson-build.sh  meson-check-testlog.py  meson-cross-android.txt  meson-cross-moxie.txt  meson-cross.txt  site.exp
.circleci/: config.yml
.github/workflows/: build.yml  emscripten.yml  label-new-issue.yaml  lwjgl.yml  release.yml  tarball.yml  winarm64.yml
.travis/: android-adb.exp  build-cross-in-container.sh  build-in-container.sh  build.sh  install.sh  site.exp  wine-sim.exp
.travis/baseboards/: adb.exp
doc/: libffi.texi  meson.build  version.texi
include/: Makefile.am  ffi.h.in  ffi_cfi.h  ffi_common.h  ffi_noarch.h.meson  fficonfig.h.cmake.in  fficonfig.h.in  meson.build
libffi.xcodeproj/: project.pbxproj
m4/: asmcfi.m4  ax_cc_maxopt.m4  ax_enable_builddir.m4
man/: Makefile.am  ffi.3  ffi_call.3  ffi_prep_cif.3  ffi_prep_cif_var.3  ffi_prep_closure_loc.3
meson-scripts/: extract-libtool-version.py  test-cc-supports-hidden-visibility.py  test-cc-uses-zarch.py  test-ro-eh-frame.py  test-unwind-section.py
msvc_build/: Ffi_staticLib.sln  Ffi_staticLib.vcxproj  Ffi_staticLib.vcxproj.filters
msvc_build/include/: ffi.h  fficonfig.h
reports/27775587673/: .sha
reports/27776837553/: .sha
reports/27817913254/: .sha
reports/27822501555/: .sha
reports/27822837961/: .sha  .workflow
reports/27822910009/: .sha
reports/27823613865/: .sha
reports/27825192312/: .sha
reports/27825815608/: .sha
reports/27827165519/: .sha
reports/27844224571/: .sha
reports/27844385712/: .sha
reports/27844624712/: .sha
reports/27845009338/: .sha
reports/27845867562/: .sha
reports/27846874512/: .sha
reports/27847162100/: .sha
reports/27851492885/: .sha
reports/27851509360/: .sha
reports/27854142713/: .sha
reports/27863699572/: .sha
reports/27864450220/: .sha
reports/27870573297/: .sha
reports/27870683624/: .sha
reports/27872962456/: .sha
reports/27872988332/: .sha
reports/27873002083/: .sha
reports/27873214888/: .sha
reports/27877270004/: .sha
src/: closures.c  debug.c  dlmalloc.c  java_raw_api.c  meson.build  plan-cache-impl.h  plan-cache.h  prep_cif.c  raw_api.c  tramp.c  types.c
src/aarch64/: ffi.c  ffitarget.h  internal.h  sysv.S  trampoline.S  win64_armasm.S
src/alpha/: ffi.c  ffitarget.h  internal.h  osf.S
src/arc/: arcompact.S  ffi.c  ffitarget.h
src/arm/: ffi.c  ffitarget.h  sysv.S
src/csky/: ffi.c  sysv.S
src/e2k/: ffi.c  ffitarget.h
src/fuzz/: ffi_strlen2_fuzzer.cpp  ffi_strlen_fuzzer.cpp
src/loongarch/: ffitarget.h  sysv.S
src/loongarch64/: ffi.c  ffitarget.h  sysv.S
src/m32r/: ffi.c
src/microblaze/: ffi.c
src/mips/: ffi.c  ffitarget.h  n32.S  o32.S
src/moxie/: ffi.c
src/or1k/: ffi.c
src/pa/: ffi.c  ffi64.c  ffitarget.h
src/powerpc/: asm.h  darwin.S  darwin_closure.S  ffi.c  ffi_darwin.c  ffi_linux64.c  ffi_powerpc.h  ffitarget.h  linux64.S  linux64_closure.S
src/riscv/: ffi.c  ffitarget.h  sysv.S
src/s390/: ffi.c  sysv.S
src/sh/: sysv.S
src/sparc/: ffi.c  ffi64.c  ffitarget.h  internal.h  v8.S  v9.S
src/wasm/: ffi.c
src/wasm32/: ffi.c  ffitarget.h
src/x86/: darwin.S  darwin64.S  ffi.c  ffi64.c  ffitarget.h  ffiw64.c  internal.h  internal64.h  sysv.S  sysv_intel.S  unix64.S  win64.S  win64_intel.S
src/xtensa/: ffi.c  sysv.S
testsuite/: Makefile.am  libffi.sum  meson.build  site.exp  test_libffi.py
testsuite/emscripten/: build-tests.sh  build.sh  conftest.py  node-tests.sh  patch_emcc.py  quiet_emcc_info.py  test.html  test_libffi.py
testsuite/emscripten-test-stuff/: build-tests.sh  node-tests.sh
testsuite/lib/: libffi.exp
testsuite/libffi.bhaible/: Makefile  bhaible.exp  test-call.c  test-callback.c  testcases.c
testsuite/libffi.call/: blah.txt  bpo-38748.c  call.exp  callback.c  callback2.c  callback3.c  callback4.c  closure_thiscall_fastcall_pop.c  cls_many_mixed_args.c  ffitest.h  float.c  float2.c  float3.c  many_large_structs.c  many_small_structs.c  mingw64-align.c  negint.c  overread.c  plan.c  return_ldl.c  return_sl.c  simd_double_matrices.c  simd_float_matrices.c  simd_types.h  strlen.c  struct_by_value_big.c  struct_int_float.c  unwindtest.cc  unwindtest_ffi_call.cc  va_2.c  va_struct1.c  va_struct2.c  va_struct3.c  x32.c
testsuite/libffi.closures/: blah.txt  closure.exp  closure_fn0.c  closure_fn3.c  closure_loc_fn0.c  cls_12byte.c  cls_16byte.c  cls_18byte.c  cls_19byte.c  cls_20byte1.c  cls_24byte.c  cls_2byte.c  cls_3_1byte.c  cls_3byte1.c  cls_3byte2.c  cls_3float.c  cls_4_1byte.c  cls_4byte.c  cls_5_1_byte.c  cls_5byte.c  cls_6_1_byte.c  cls_6byte.c  cls_7_1_byte.c  cls_7byte.c  cls_8byte.c  cls_9byte1.c  cls_9byte2.c  cls_align_double.c  cls_align_float.c  cls_align_longdouble.c  cls_align_longdouble_split.c  cls_align_longdouble_split2.c  cls_align_pointer.c  cls_align_sint16.c  cls_align_sint32.c  cls_align_sint64.c  cls_align_uint16.c  cls_align_uint32.c  cls_align_uint64.c  cls_double_va.c  (+29 more)
testsuite/libffi.complex/: complex.exp  complex_i128.c
testsuite/libffi.go/: aa-direct.c  static-chain.h
testsuite/libffi.threads/: threads.exp  tsan.c
testsuite/libffi.vector/: cls_vector.c  vector.exp  vector.h  vector_args_spill.c  vector_double2.c  vector_double4.c  vector_float32x2.c  vector_float32x4.c  vector_hva.c  vector_int32x4.c  vector_validate.c  vector_vec3.c
(+1959 files in other folders)
